GearsetPOC/force-app/main/default/objects/Good_Will_Gesture__c/Good_Will_Gesture__c.object-meta.xml
<CustomObject>
    <label>Good Will Gesture</label>
    <nameField>
        <displayFormat>GWG{00000}</displayFormat>
        <label>Gesture</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Good Will Gestures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>