GearsetPOC/force-app/main/default/objects/Good_Will_Gesture__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipName>Favours</relationshipName>
    <type>Lookup</type>
</CustomField>