GearsetPOC/force-app/main/default/objects/Good_Will_Gesture__c/fields/Authorised_By__c.field-meta.xml
<CustomField>
    <fullName>Authorised_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorised By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Favours</relationshipName>
    <type>Lookup</type>
</CustomField>