GearsetPOC/force-app/main/default/objects/Good_Will_Gesture__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Account_Branches__c</referenceTo>
    <relationshipLabel>Good Will Gestures</relationshipLabel>
    <relationshipName>Good_Will_Gestures</relationshipName>
    <type>Lookup</type>
</CustomField>