GearsetPOC/force-app/main/default/objects/Good_Will_Gesture__c/fields/Favour_Details__c.field-meta.xml
<CustomField>
    <fullName>Favour_Details__c</fullName>
    <label>Favour Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>