GearsetPOC/force-app/main/default/objects/Good_Will_Gesture__c/fields/Regional_Office__c.field-meta.xml
<CustomField>
    <fullName>Regional_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Office</label>
    <referenceTo>Regional_Office__c</referenceTo>
    <relationshipLabel>Good Will Gestures</relationshipLabel>
    <relationshipName>Good_Will_Gestures</relationshipName>
    <type>Lookup</type>
</CustomField>