GearsetPOC/force-app/main/default/objects/Good_Will_Gesture__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Favours</relationshipName>
    <type>Lookup</type>
</CustomField>